fixed overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -1506,7 +1506,12 @@ h3,
 h4,
 h5,
 h6,
-p {
+p,
+i,
+a,
+li,
+label,
+button {
   padding: 0;
   margin: 0;
   overflow: hidden;
